# workspace-heimdall

./: .gitignore  LICENSE  README.md  repos.yaml
launches/: README.md
launches/base_station/: base_station_autonomy.launch.py  base_station_es.launch.py  base_station_science.launch.py
launches/components/: can_interface.launch.py  dynamic_cam.launch.py  joy.launch.py  lidar.launch.py  liosam.launch.py  urc_px4.launch
launches/config/: 8bit-g.config.yaml  8bit-p.config.yaml  aruco_info.yaml  high.yaml  image_transport_qos.yaml  incomprehensible.yaml  insane.yaml  liosam.config.yaml  logitech_01_info_1920x1080.yaml  logitech_01_info_640x480.yaml  logitech_03_info_1920x1080.yaml  logitech_03_info_640x480.yaml  logitech_05_info_1920x1080.yaml  logitech_05_info_640x480.yaml  logitech_10_info_1920x1080.yaml  logitech_10_info_640x480.yaml  logitech_18_info_1920x1080.yaml  logitech_18_info_640x480.yaml  logitech_19_info_1920x1080.yaml  logitech_19_info_640x480.yaml  logitech_info.yaml  low.yaml  lowest.yaml  mid.yaml  pano.yaml  params_1.yaml  ps5.config.yaml  tcp_topics.yaml  urc_px4_config.yaml  velodyne.config.yaml
launches/heimdall/: heimdall_arm.launch.py  heimdall_aruco.launch.py  heimdall_autonomy.launch.py  (+10 more)
scripts/: README.md
setup/: README.md  install_humble.bash  install_libs.bash  setup_env.bash
src/: README.md
src/infrastructural_packages/robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/infrastructural_packages/robot_interfaces/action/: GoToPoint.action
src/infrastructural_packages/robot_interfaces/msg/: CanCommand.msg  EDWaypoint.msg  EDWaypointList.msg  ManipulatorControl.msg  MotorData.msg  Status.msg  UrcCustomPath.msg  UrcCustomPoint.msg  WaypointObject.msg
src/infrastructural_packages/robot_interfaces/srv/: AddXYZ.srv  CollectSample.srv  CollectSpectrometerData.srv  GUIWaypointPath.srv  GeneratePoints.srv  GeneratePointsAround.srv  GetDistanceValue.srv  GoToNextPoint.srv  GoToPointSrv.srv  Heartbeat.srv  MoistureSensor.srv  ObjectPosition.srv  Query.srv  QueryWaypoint.srv  RebootScoop.srv  Remove.srv  Reorder.srv  Replace.srv  SaveQualityImage.srv  SendCanCommand.srv  SetPIDPlannerPrecision.srv  SpinCentrifuge.srv  SubsurfaceMotor.srv  Waypoint.srv
src/infrastructural_packages/robot_interfaces/urdf/: heimdall_arm.urdf
(+32 files in other folders)
